# saas-workspace

./: .gitignore  CENTRAL_STATE.md  CHANGELOG.md  CLAUDE.md  README.md  plan-fact.md  todos.md  цифры.xlsx
Nalog/: CLAUDE.md  README.md  fact.md  tax-calendar-2026.md
Product/: CLAUDE.md  MEMORY.md  README.md
Strategy/: CLAUDE.md
ai-architecture/: CLAUDE.md  DOMAIN_STATE.md  russian-ai-model-selection.md  standards.md  tech-stack-ai-contour.md
dev/: CLAUDE.md  DOMAIN_STATE.md  README.md  domains.md  infra-plan.md
docs/plans/: 2026-03-13-bitrix24-mcp-design.md  2026-03-13-bitrix24-mcp.md  2026-03-29-posthog-integration-design.md  2026-03-29-posthog-integration.md
finance/: CLAUDE.md  DOMAIN_STATE.md  ai-costs.md  pricing.md  tax-calendar.md  unit-economics-operations.md  unit-economics.md
legal/: CLAUDE.md  DOMAIN_STATE.md  legal-base-saas-rf.md  user_agreement.md
legal/privacy/: privacy_policy.md  (+4 more)
marketing/: CLAUDE.md  DOMAIN_STATE.md  strategy-2026.md
memory/: MEMORY.md  feedback_todos_workflow.md
referral/: README.md  program-design.md
tools/telegram-bot/: .env.example  .gitignore  pyproject.toml
tools/telegram-bot/deploy/: .env.prod  install.sh  telegram-bot.service
tools/telegram-bot/src/: bot.py  cli.py  config.py  post.py  publisher.py  scheduler.py  state.py
tools/telegram-bot/src/unilist_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tools/telegram-bot/tests/: test_bot.py  test_post.py  test_scheduler.py  test_state.py
tools/telegram-bot/tests/fixtures/: 2026-05-12-1000-lost-deal.md
(+131 files in other folders)
