[project]
name = "unilist-telegram-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-frontmatter>=1.0",
    "python-dotenv>=1.0",
    "aiosqlite>=0.19",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
unilist-bot = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
